[package]
name = "data-utility-belt"
version = "0.1.5"
authors = ["Adalberto Teixeira"]
edition = "2018"
description="Utility to perform a series of basic operation on data."
readme = "README.md"
homepage = "https://github.com/adalbertoteixeira/data-utility-belt"
repository = "https://github.com/adalbertoteixeira/data-utility-belt"
license = "MIT"

[dependencies]
clap = "2.33.0"
serde_json = "1.0"
regex = "1.3.6"
lazy_static = "1.4.0"
